--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -862,6 +862,17 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
       </object>
     </child>
     <child>
+      <object class="GtkImageMenuItem" id="tcm_mark_as_started">
+        <property name="label" translatable="yes">_Start now</property>
+        <property name="visible">True</property>
+        <property name="use_underline">True</property>
+        <property name="image">tcm_img_mark_start</property>
+        <property name="use_stock">False</property>
+        <property name="always_show_image">True</property>
+        <signal name="activate" handler="on_mark_as_started"/>
+      </object>
+    </child>
+    <child>
       <object class="GtkImageMenuItem" id="tcm_mark_as_done">
         <property name="label" translatable="yes">Mark as _Done</property>
         <property name="visible">True</property>
