--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -862,48 +862,13 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
       </object>
     </child>
     <child>
-      <object class="GtkImageMenuItem" id="tcm_mark_as_started">
-        <property name="label" translatable="yes">Defer to t_oday</property>
+      <object class="GtkImageMenuItem" id="tcm_defer_to_menu">
+        <property name="label" translatable="yes">De_fer to...</property>
         <property name="visible">True</property>
+        <property name="submenu">DeferToContextMenu</property>
         <property name="use_underline">True</property>
         <property name="use_stock">False</property>
-        <signal name="activate" handler="on_mark_as_started"/>
-      </object>
-    </child>
-    <child>
-      <object class="GtkImageMenuItem" id="tcm_defer_to_tomorrow">
-        <property name="label" translatable="yes">Defer to _tomorrow</property>
-        <property name="visible">True</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">False</property>
-        <signal name="activate" handler="on_defer_to_tomorrow"/>
-      </object>
-    </child>
-    <child>
-      <object class="GtkImageMenuItem" id="tcm_defer_to_next_week">
-        <property name="label" translatable="yes">Defer to next _week</property>
-        <property name="visible">True</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">False</property>
-        <signal name="activate" handler="on_defer_to_next_week"/>
-      </object>
-    </child>
-    <child>
-      <object class="GtkImageMenuItem" id="tcm_defer_to_next_month">
-        <property name="label" translatable="yes">Defer to next _month</property>
-        <property name="visible">True</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">False</property>
-        <signal name="activate" handler="on_defer_to_next_month"/>
-      </object>
-    </child>
-    <child>
-      <object class="GtkImageMenuItem" id="tcm_defer_to_next_year">
-        <property name="label" translatable="yes">Defer to next _year</property>
-        <property name="visible">True</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">False</property>
-        <signal name="activate" handler="on_defer_to_next_year"/>
+        <signal name="activate" handler="on_defer_to_menu"/>
       </object>
     </child>
     <child>
@@ -936,6 +901,54 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
         <property name="use_stock">True</property>
         <property name="accel_group">accelgroup1</property>
         <signal name="activate" handler="on_delete_task"/>
+      </object>
+    </child>
+  </object>
+  <object class="GtkMenu" id="DeferToContextMenu">
+    <property name="visible">True</property>
+    <child>
+      <object class="GtkImageMenuItem" id="tcm_mark_as_started">
+        <property name="label" translatable="yes">t_oday</property>
+        <property name="visible">True</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">False</property>
+        <signal name="activate" handler="on_mark_as_started"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="tcm_defer_to_tomorrow">
+        <property name="label" translatable="yes">_tomorrow</property>
+        <property name="visible">True</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">False</property>
+        <signal name="activate" handler="on_defer_to_tomorrow"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="tcm_defer_to_next_week">
+        <property name="label" translatable="yes">next _week</property>
+        <property name="visible">True</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">False</property>
+        <signal name="activate" handler="on_defer_to_next_week"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="tcm_defer_to_next_month">
+        <property name="label" translatable="yes">next _month</property>
+        <property name="visible">True</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">False</property>
+        <signal name="activate" handler="on_defer_to_next_month"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="tcm_defer_to_next_year">
+        <property name="label" translatable="yes">next _year</property>
+        <property name="visible">True</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">False</property>
+        <signal name="activate" handler="on_defer_to_next_year"/>
       </object>
     </child>
   </object>
